fix: spacing between social icons on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -322,6 +322,10 @@ img#cover-photo {
 .footer{
   text-align: center;
 }
+
+.footer-link{
+  line-height: 1;
+}
 /*****************************************************************************/
 /*
 /* Colophon
